docs/api/0.2.0/ironwood/ds/IntArrayList.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.0**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# IntArrayList

**Class** · `ironwood.ds.IntArrayList`

```java
public class IntArrayList implements Iterable<IntHolder>
```

**Implements:** [`Iterable<IntHolder>`](../lang/Iterable.md)


## Member summary

[Fields](#fields) · [Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`DEFAULT_INITIAL_CAPACITY`](#member-DEFAULT_INITIAL_CAPACITY) |  |
| [`DEFAULT_GROWTH_FACTOR`](#member-DEFAULT_GROWTH_FACTOR) |  |
| [`IntArrayList()`](#member-IntArrayList-28--29-) |  |
| [`IntArrayList(int)`](#member-IntArrayList-28-int-29-) |  |
| [`IntArrayList(float)`](#member-IntArrayList-28-float-29-) |  |
| [`IntArrayList(int,float)`](#member-IntArrayList-28-int-2c-float-29-) |  |
| [`getInitialCapacity()`](#member-getInitialCapacity-28--29-) |  |
| [`getGrowthFactor()`](#member-getGrowthFactor-28--29-) |  |
| [`clear()`](#member-clear-28--29-) |  |
| [`add(int)`](#member-add-28-int-29-) |  |
| [`addLast(int)`](#member-addLast-28-int-29-) |  |
| [`addFirst(int)`](#member-addFirst-28-int-29-) |  |
| [`removeFirst()`](#member-removeFirst-28--29-) |  |
| [`removeLast()`](#member-removeLast-28--29-) |  |
| [`insert(int,int)`](#member-insert-28-int-2c-int-29-) |  |
| [`get(int)`](#member-get-28-int-29-) |  |
| [`remove(int)`](#member-remove-28-int-29-) |  |
| [`size()`](#member-size-28--29-) |  |
| [`isEmpty()`](#member-isEmpty-28--29-) |  |
| [`equals(Object)`](#member-equals-28-Object-29-) |  |
| [`hashCode()`](#member-hashCode-28--29-) |  |
| [`toString()`](#member-toString-28--29-) |  |
| [`iterator()`](#member-iterator-28--29-) |  |

## Fields

<a name="member-DEFAULT_INITIAL_CAPACITY"></a>

### `DEFAULT_INITIAL_CAPACITY`

```java
public static final int DEFAULT_INITIAL_CAPACITY = 64;
```


[Back to member summary](#member-summary)

<a name="member-DEFAULT_GROWTH_FACTOR"></a>

### `DEFAULT_GROWTH_FACTOR`

```java
public static final float DEFAULT_GROWTH_FACTOR = 1.75f;
```


[Back to member summary](#member-summary)

## Constructors

<a name="member-IntArrayList-28--29-"></a>

### `IntArrayList()`

```java
public IntArrayList()
```


[Back to member summary](#member-summary)

<a name="member-IntArrayList-28-int-29-"></a>

### `IntArrayList(int)`

```java
public IntArrayList(int initialCapacity)
```


[Back to member summary](#member-summary)

<a name="member-IntArrayList-28-float-29-"></a>

### `IntArrayList(float)`

```java
public IntArrayList(float growthFactor)
```


[Back to member summary](#member-summary)

<a name="member-IntArrayList-28-int-2c-float-29-"></a>

### `IntArrayList(int,float)`

```java
public IntArrayList(int initialCapacity, float growthFactor)
```


[Back to member summary](#member-summary)

## Methods

<a name="member-getInitialCapacity-28--29-"></a>

### `getInitialCapacity()`

```java
public int getInitialCapacity()
```


[Back to member summary](#member-summary)

<a name="member-getGrowthFactor-28--29-"></a>

### `getGrowthFactor()`

```java
public float getGrowthFactor()
```


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```


[Back to member summary](#member-summary)

<a name="member-add-28-int-29-"></a>

### `add(int)`

```java
public void add(int element)
```


[Back to member summary](#member-summary)

<a name="member-addLast-28-int-29-"></a>

### `addLast(int)`

```java
public void addLast(int element)
```


[Back to member summary](#member-summary)

<a name="member-addFirst-28-int-29-"></a>

### `addFirst(int)`

```java
public void addFirst(int element)
```


[Back to member summary](#member-summary)

<a name="member-removeFirst-28--29-"></a>

### `removeFirst()`

```java
public int removeFirst()
```


[Back to member summary](#member-summary)

<a name="member-removeLast-28--29-"></a>

### `removeLast()`

```java
public int removeLast()
```


[Back to member summary](#member-summary)

<a name="member-insert-28-int-2c-int-29-"></a>

### `insert(int,int)`

```java
public void insert(int index, int element)
```


[Back to member summary](#member-summary)

<a name="member-get-28-int-29-"></a>

### `get(int)`

```java
public int get(int index)
```


[Back to member summary](#member-summary)

<a name="member-remove-28-int-29-"></a>

### `remove(int)`

```java
public int remove(int index)
```


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<IntHolder> iterator()
```


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
